kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: post-microservice
  namespace: dwetter
spec:
  selector:
    app: post-microservice
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
